--- a/client/styles/character.css
+++ b/client/styles/character.css
@@ -5,6 +5,13 @@
 
 .character {
   border: 2px solid black;
-  padding: 5em 10em;
+  width: 25em;
+  height: 18em;
   margin: 1em 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.front h2 {
 }
