--- a/client/styles/character.css
+++ b/client/styles/character.css
@@ -25,7 +25,7 @@
   padding: 0em;
 }
 
-.char-info {
+.char-readings {
   align-self: flex-start;
   display: flex;
   flex-direction: column;
@@ -33,16 +33,26 @@
   /* padding: 1em; */
 }
 
-.info-section {
+.reading {
   padding: 0.5em;
 }
 
-.info-section h3,
-.info-section p {
+.reading h3,
+.reading p {
   margin: 0em;
   padding: 0em;
 }
 
 .back {
   justify-content: flex-start;
+}
+
+.meanings-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0em;
+}
+
+.meaning-item {
+  padding: 0em 0.5em;
 }
